2009-07-17  Larry Ewing  <lewing@novell.com>

	* plugin.cpp:  get agressive about flushing loaded events to the
	plugin from splash elements.  Fixes 285,445.

2009-07-16  Larry Ewing  <lewing@novell.com>

	* plugin.cpp, plugin.h: rework the splash logic to handle document
	fragment references and get closer to emitting the correct events
	in the correct order.

	* plugin-class.cpp: use PluginInstance::IsLoaded instead of poking
	at the surface.

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* cbinding.h: Regenerated.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: PluginInstance::UpdateSourceByReference: add a
	Deployment::SetCurrent.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-entry.cpp: Push/Pop the current deployment on every
	transition to the browser. Makes MS DRT #2003 not spew a lot
	of deployment mismatch warnings.

2009-07-15  Larry Ewing  <lewing@novell.com>

	* plugin.cpp: reconnect onload in LoadXAML and LoadXAP so that
	source changes reset the oneshot call.  Fixes DRT#21.

2009-07-13  Sebastien Pouliot  <sebastien at ximian.com> 

	* plugin.cpp: Check for NULL *and* Empty inside UpdateSource.
	Gives a bit of progress for DRT#354

2009-07-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* cbinding.h: Regenerated.

2009-07-13  Alan McGovern  <amcgovern@novell.com>

	* plugin-class.h.in: Var should be named
	  'OnSourceDownloadComplete' not 'OnSourceDownloadCompleted'

2009-07-13  Alan McGovern  <amcgovern@novell.com>

	* cbinding.h: Commit the initial implementation of the
	  TabNavigationWalker. Supports the three tabbing modes and
	  also forward/backward tabbing. Passes drt 323 except for a
	  default focusing issue.

2009-07-10  Sebastien Pouliot  <sebastien at ximian.com> 

	* plugin.cpp: Only call EmitSourceDownloadComplete is we needed
	to download the splashscreen (versus embedded using #)

2009-07-10  Sebastien Pouliot  <sebastien at ximian.com>

	* plugin.cpp|h, plugin-class.cpp|h: Rename 