@@ -2056,13 +2056,16 @@ PluginXamlLoader::SetProperty (void *parser, Value *top_level, const char *xmlns
 	return true;
 }
 
-PluginXamlLoader::PluginXamlLoader (const char *filename, const char *str, PluginInstance *plugin, Surface *surface)
+PluginXamlLoader::PluginXamlLoader (const char *filename, const char *str, PluginInstance *plugin, Surface *surface, bool import_default_xmlns)
 	: XamlLoader (filename, str, surface)
 {
 	this->plugin = plugin;
 	xaml_is_managed = false;
 	initialized = false;
 	error_args = NULL;
+
+	SetImportDefaultXmlns (import_default_xmlns);
+
 #if PLUGIN_SL_2_0
 	xap = NULL;
 
