@@ -1,3 +1,10 @@
+2009-07-18  Jackson Harper  <jackson@ximian.com>
+
+	* plugin-class.cpp:
+	* plugin.h|cpp: Add a flag to import the default xmlns. Basically
+	nothing sets this to true except for the JS CreateFromXaml
+	function.
+
 2009-07-17  Larry Ewing  <lewing@novell.com>
 
 	* plugin.cpp:  get agressive about flushing loaded events to the
